[package]
name = "income-app"
version = "0.1.0"
authors = ["Sumod Sivadas <contactsumod@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.zumod.income-app"